fullstack.yaml
# 1. DATABASE
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    tier: db-layer
  ports:
    - port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  selector:
    matchLabels:
      tier: db-layer
  template:
    metadata:
      labels:
        tier: db-layer
    spec:
      containers:
      - name: postgres
        image: postgres:15
---
# 2. BACKEND
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    tier: api-layer
  ports:
    - port: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      tier: api-layer
  template:
    metadata:
      labels:
        tier: api-layer
    spec:
      containers:
      - name: backend
        image: simarjitsingh22/quickcomm-backend:v5
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /api/health
            port: 5000
          initialDelaySeconds: 10
---
# 3. FRONTEND
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    tier: ui-layer
  ports:
    - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      tier: ui-layer
  template:
    metadata:
      labels:
        tier: ui-layer
    spec:
      containers:
      - name: frontend
        image: simarjitsingh22/quickcomm-frontend:v5
        imagePullPolicy: IfNotPresent
---
# 5. INGRESS 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quickcomm-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: flashstore.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
